changes to end sections - may need to merge

--- a/_posts/thesis_chapters/2024-10-5-Design2.md
+++ b/_posts/thesis_chapters/2024-10-5-Design2.md
@@ -857,48 +857,33 @@ Chapter 6 analyses the potential of activities which help build the participants
 ### Social coding processes
 
 While changes in the tools, documentation use were initially designed to solve technical problems, they also impacted the culture of the coding group.
-In particular the starting template/ half baked template, had particular impact on division of labour, and a knock on positive impact on general engagement.
 
-The introduction of a starting template allowing participants to work by themselves or with a family members, and thus a greater freedom of participation in terms of a flexible approach to division of labour and design process.
+DOES THIS GO EARLIER?
+Despite relative simplicity of the highlighted affordances, complex and divergent style and feel of games emerged at these early stages and the use of collection of code examples that participants could choose prompted greater diversity still. In particular the starting template had particular impact on division of labour, allowing participants to work by themselves or with a family members, this had a knock on positive impact on general engagement.
 
 This shift way from larger groups also addressed issues of disconnected group work cause by unrealistic and inexperience of dividing labour on a coding project. For example, one parent expressed concern in P1, that of parents' involvement may be restricting  children's freedom to freely collaborate with other young people thus negatively impact the potential for peer learning.
 
 The value of peer social experiences which emerged naturally at in P2 was such that for P3 I sought to intervene gently to encourage them.
 
-In journal notes, I observed that the shift of process in terms of division of labour from  P1 to P2 afforded by the introduction of a _half-baked_ template. The use of a starting template and scaffolded use and modify early activities increased the number of games being made as it reduced the typical working group to individuals or pairs.
+<!-- In journal notes, I observed that the shift of process in terms of division of labour from  P1 to P2 afforded by the introduction of a _half-baked_ template. The use of a starting template and scaffolded use and modify early activities increased the number of games being made as it reduced the typical working group to individuals or pairs. -->
 
 Starting from a playable if incomplete game and adapting it, greatly increased the amount of time participants spent playtesting their own and other games. I noted my own concern if errors compounded to make the participants game unplayable for any extended time. In video data, participants show frustration if not able to playtest game due to errors (for a clear example see Olivia and Suzanna's frustration in Appendix 5.x.)
 
-My broad observations align with / EXTEND? the supported benefits outlined in research on the Use-Modify-Create (UMC)  [-@lytle_use_2019-1] and particularly the technique of starting with  half baked games [@grizioti_game_2018-1]. IT THIS RIGHT? OR DO THEY ADD ANYTHING?
+My broad observations align with / EXTEND? the supported benefits outlined in research on the Use-Modify-Create (UMC)  [-@lytle_use_2019-1] and particularly the technique of starting with  half baked games [@grizioti_game_2018-1].
+IT THIS RIGHT? OR DO THEY ADD ANYTHING?
 
-In P2, while the process of peer playtesting was encouraged in the latter third of each two hour session it was not explicitly guided. These technical supports impacted the social and cultural processes primarily through playtesting of the diversity of games created by participants. Other fortuitously, complex patterns of playtesting emerged rapidly which are explored in chapter 7.
+In P2, while the process of peer playtesting was encouraged it was not explicitly guided. Fortuitously, complex patterns of playtesting emerged rapidly which are explored in chapter 7.
+
+CAN THIS BE A MORE CONSISE VIA A LINK?
 
 
-#### What kind of Maker are you - Motivations behind social processes (emerging in playtesting)
+#### Use of side missions to encourage varied creative practices
 
-
-By the end of P2 most of the tools and main processes were in place. But I still felt tensions around introducing reflective processes and wanted to de-centre myself where possible from a teacher position. My journal notes detail an evolution of attempts to try to build into the program, activities which help build the participants sense of their own identities of game makers or more generally digital designers. Participants, particularly older ones, used playtesting as a way of showing support for fellow game makers. Example behaviours included: praising graphical content; making links with home interests of participants through questioning; and building rapport.
-
-Molly in particular used playtesting to show her appreciation of the graphical work of others especially in the creation of cute animal characters. In response to one game which featured an image of a dog, other participants asked: _Do you like dogs? Do you have a dog at home?_.
-
-In and early tentative attempt to define in broad strokes the types of game maker behaviour and underlying goals, taking inspiration from Bartle's game player types [@hamari_player_2014], identifying social makers, planners, magpies and glitchers.  
-
--   **Social makers:** form relationships with other game makers and players by finding out more about their work and telling stories in their game   
-- **Planners:** like to study to build knowledge of the tools before they build up their game step-by-step following instructions
--   **Magpie makers:** like trying out lots of different things and happy to borrow code, images and sound from anywhere for quick results
--   **Glitchers:** mess around with the code trying to see if they can break it interesting ways and cause a bit of havoc for other users
-
-I saw potential value here to address the danger internal bias about the kind of process that a computer programmer should adopt, echoing the call for pluralism in approaches [@papert_epistemological_1990]. Thus, in P2 I introduced a starter game in which families moved into different quadrants of the room in answering questions on the Bartle test. This process celebrated different game playing types and allowed a public sharing of previously hidden gaming preferences, although for some non-gaming parents and children I had to ask them to use their imagination. Several parents noted that this process gave them great insight into how their child identified within the cultures of the games they played.
-
-After the process of playing a game I shared my proposition that there different game maker types. I asked participants to evaluate and discuss with peers what kind of game maker they were from the list above. This process was not explicitly used in later reflections however parent Mark made the following comment in post-session P3 interviews.
-
-    We used the instructions, we like to plod.
+In appendix 5.playertypes, I outline the use of a game to explore different game playing types. I then proposed different making types. I used the question "What kind of game maker are you?" as an indicator to participants that one aim of the project was to create a space where different approaches are possible and celebrated.
 
 ![Illustration 4.x - What kind of game maker are you  ](./Pictures/kindofgamemaker.png){width=95%}
 
-I used the question "What kind of game maker are you?" as an indicator to participants that one aim of the project was to create a space where different approaches are possible and celebrated. To communicate this approach, as well as starting game activity, I incorporated the question into an animation of the resources home page (see illustration 4.x). In P3 the underlying ideas were incorporated into the process drama described in the next section.
-
-#### Use of side missions to encourage varied creative practices
+To communicate this approach, as well as starting game activity, I incorporated the question into an animation of the resources home page (see illustration 4.x). In P3 the underlying ideas were incorporated into the process drama described in the next section.
 
 One of the activities that participants carried out within the frame of the fictional scenario  was the undertaking of side-missions. The motivations of introducing this drama process and social missions were to reinforce social and cultural elements many of which emerged during semi-structured playtesting. In this section I analyse these missions within the AT concept of dual stimulation.  
 
@@ -926,27 +911,71 @@ The impact of social missions and playtesting are described in more detail in ch
 ## Chapter Discussion
 
 
-### Summary of evolution of learning design tools and processes
+#### Remixing, peer learning, and choice of starting template MOVE UP
 
-This chapter has explored the complexity of the interacting tools and documentation in relation to their authenticity and impact on participant experiences. This design narrative outlines how the use of authentic tools and processes, while challenging for novices, can be addressed using existing of key design principles, in this case UMC, half-baked games and attention to affordances, in this case GDPs
+**Tension of a group remixing from one template rather than feeler community inspiration and interaction**
 
-With the design of template in place, participants required minimal support to find use the key affordances in to make impactful game changes. Despite relative simplicity of the highlighted affordances, complex and divergent style and feel of games emerged at these early stages.
+To address issues of a practical nature to get starting coding, a restriction in game genre and was made in the form of a starting template, thus restricting personal choice, in a way which negatively impacted some families (see appendix 5.bee). In addition no online community was promoted to motivate inspiration from the work of others,  collaboration and peer review via comments [@monroy-hernandez_cooperation_nodate; @cress_supporting_2016]. However some positive aspects inherent to this design choice.
+
+- In practical terms, it simplified the process of supporting code errors,
+
+- it spurred community inspiration and interaction, peer support, sharing and problem solving due to the use of similar code bases.
 
 
-Simple card prompts were introduced to do help accelerate the process to facilitate working with large groups and to scaffold use of code snippets and written instructions. Greater diversity still followed.
-
-LATER? My choices balanced the value of positive engagement of asset creating, development of digital literacy skills associated with web production, and a focus on promoting code modification.  
+<!-- Sharing of ideas and inspiration did happen both on the playtesting (explored later and more extensively Chapter 7) of each others games and via incidental exposure to the online graphical creations of others via a shared account to Piskel. -->
 
 
-### Discussion: locating the ethos of game template and core tools with other research
 
-**Synthesis effect of UMC + collection of GDPS**
 
-Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982].  The use of a starting template was inline with core motivations of UMC technique, namely, to build familiarity with the code structure, and confidence in use of tools in an accelerated way.
+#### Expressing the key features of this design narrative using the argumentative grammar of 3GAT
 
-As explored above, the shift in template design from P1 to P2 involved a more structured approach in for participants in use and modify stages where key affordances were highlighted in the code design.
+In returning to the role of 3GAT concepts in outlining the argumentative grammar of this design, the following observations are of value.
 
-**Comparing to Microworlds**
+<!-- NOTE - PENUEL and others exploration of argumentative grammar of interventions.  -->
+
+
+The adaptations of to these tools can be conceived of as increasing instrumental agency by removing the need to understand concepts or use tools which were beyond the skill level of the participants.
+
+
+
+- Affordances outlined in this learning design  double stimulation, give a quick summary, different types of agency  
+
+- UMC literature, and half baked games, emerged, concepts which were not well known before the start of this research. These pedagogies can be seen pedagogy built around a sets of design affordances that fitting a DBR approach,
+
+
+Other tensions were resolved with more fundamental shifts to the overall structure of the activity which can be said to align more closely with the concept of transformative (authorial agency)  agency.
+
+**Emergence of GDPs as a germ cell of activity**
+
+For this learning design, the concept and pedagogy of working with game design patterns emerged not only as an object of activity on a more granular scope than typical, but also as guiding germ cell concept which helps participant and facilitators. In the discussion below, GDPs are noted in their use in step-wise instruction processes, and are also the topic of Chapter 6.
+
+
+### Summary of evolution of learning design tools and processes (specifically in relation to constructionist principles)
+
+This chapter has explored the complexity of the interacting tools and documentation in relation to their authenticity and impact on participant experiences. This design narrative outlines how the use of authentic tools and processes, while challenging for novices, can be addressed using existing of key design principles.
+
+RQ2 addresses uses the term computational fluency, which as explored in chapter 2, is a better fit for the aims of this study than computational thinking, given the former's increased focus on agency and a more concrete, accessible approach.   
+
+<!-- At some point in this process I realised that I wanted to encourage the growth of computational fluency.
+
+That was not clear, the use of computational thinking also jumped out from a sense of wanting to fit into the common frameworks of this area. But this approach had always seemed too abstract as a form of repertoire to me. More hands on specific repertoires to do with the logistics of more concrete tasks suited the high impact from minimal input approach, made particularly relevant given the difficulty of using a code environment. -->
+
+This chapter has by focusing on first technical and then more social dimensions of the learning design, (re)surfaced the many barriers to achieving computational fluency via the text coding of a multi-media project. The next section provides a summary of the designs approach to try to address these tensions in relation to existing research, in particular UMC, half-baked games and  constructionist design principles.
+
+ <!-- in line with wider conceptions of PBL and UDL.
+
+  - particpant voice and choice
+  - peer learning and ongoing sharing of process via product
+  - reduced class instructions
+  - avoiding stuckness
+  - linking to authentic practices and commuities
+
+While computational fluency is a valid of the objectives of the game making activity goal, this chapter has (re)surfaced the many barriers to achieving this via the text coding of a multi-media project. -->
+
+
+
+
+#### Comparing to Microworlds & constructionist design priniciples
 
 The process of modification of the starter template, foregrounding key affordances, together with the restricted tool choice of a code playground and pixel art editor with the authentic, yet scaffolded approach of both tools can be compared to the constructionism-informed design decisions made in creating a Microworld environment.
 
@@ -959,9 +988,58 @@ Many of the design adaptations described in this chapter align with motivations 
 
 The careful choice of affordances by the microworld designer, to structure user experimentation, which Laurillard notes reduces dependence on instruction or direct facilitator input.
 
+Of particular relevant to the process of this design is the  constructionist design principles, choose black boxes carefully.  Resnick [@resnick_reflections_2005] explains the designing of black boxes as the process of as abstracting away areas potentially problematic areas of the production process. Black boxes allow the learning design to steer participants towards the exploration of certain concepts and away from those that have been hidden.
+
+The _black box_ design decisions of use of tools and documentation create a kind of border between the participants experience with the protective environment of the scaffolded learning experience and a more open ecology of learning from code in the wild; specifically via the use of authentic developer focused tools, processes and documentation. A significant drawback of using a bespoke tool for novices is that attempts to progress by stepping outside of that protective area risk culture shock and alienation from the newly unfamiliar environment.
+
+**tsp**
 Additionally, the concept of task specific programming language within that process is relevant as affordances in my design are chosen not only to impact on the game, but also to build familiarity with code structures.
 
+**differences**
 There are however notable differences to a Microworld approach, primarily in the use of an authentic coding language in the form of javascript. Thus, the code language has not been simplified, other supporting resources guide the participant to more simple uses.
+
+
+My design decision to build the toolset as structure on top of authentic tools and languages can be likened to creating a protective harbour to shield new users from the complexity of the underlying configuration of interrelated web-technologies and instead highlight design affordances that facilitate creative agency.
+
+Increased scaffolding of learner resources and tools can increase instrumental agency for novice coders but at the potential cost of reducing access to the tools and processes of authentic creative communities.
+
+
+
+
+
+#### The potentially awesome impact of lifting the lid on authentic technologies   
+
+One of the differences is in authenticity...
+
+Aligned with the general principles of PBL [@hung_engaged_2006], this design has strived for authenticity in varied forms. Authenticity in terms of activity object here is multiple in dimension, e.g in audience, in tool use and in creative processes. While the impact of the authentic dimentions of the tools and process described in this chapter 7 in depth, this section outlines some of the rationale of design descriptions in relation to existing research.
+
+
+Lifting the lid on hidden technologies and concepts in hands-on, exploratory processes can be empowering for participants. Ratto explores this via critical making [@ratto_critical_2011], a process which playfully surfaces Latour's [@weibel_making_2005; @latour_cautious_2008] concepts of shifting matters of fact to matters of concern by exposing taken for granted artefacts as objects that have been designed (for better or worse). Conversations between participants showing an inspirational or engaging impact on previously unknown technology. For examples, exchanges among participants that communicated a sense of awe of how much effort and coding must be involved in a professional game based on the relative complexity of the code of their simple game.    
+
+    Pearl: It just shows you what goes into these games.
+    Student Helper 3: Think about how much effort goes into.
+    Pearl: You just take things for granted don’t you?
+
+
+
+
+<!-- MOVE TO CH.7?
+Participants are able to leave the protective harbour by accessing more authentic documentation and moving beyond existing templates. The experience may be involve choppier waters but the tools and processes remain familiar. -->
+
+<!-- IT FEELS LIKE IT WOULD BE GOOD TO TRY TO SQUEEZE THIS BIT INTO CHAPTER 4 ?
+PERHAPS via some ADDITION TO A TABLE AT THE END OF CHATP#### Different black boxes for different goalsER 4 -->
+
+<!-- While these elements of ethos are aligned, the process of supporting novices to use an authentic, text-based language and authoring tools used by professional community required more specific adaptations (o) : creating simplified but extendable starting template; highlighting code variables as key design affordances; using a grid structure to visually facilitate level design; and simplifying the syntax and the structure of the game code. -->
+
+<!-- This is a long-running theme of constructionist research, with roots in Papert concept of Microworlds, typically embodied by the Mathland environment, where participants control a robotic turtle with lines of simplified LOGO code language.  Because the turtle speaks only LOGO, children are drawn to speak LOGO to progress. Thus, Scratch and Mircoworlds can be seen as digital playgrounds with affordances that encourage certain types of play. -->
+
+
+#### **Synthesis effect of UMC + collection of GDPS**
+
+Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982].  The use of a starting template was inline with core motivations of UMC technique, namely, to build familiarity with the code structure, and confidence in use of tools in an accelerated way.
+
+As explored above, the shift in template design from P1 to P2 involved a more structured approach in for participants in use and modify stages where key affordances were highlighted in the code design.
+
 
 **Comparing to Stepwise approaches**
 
@@ -975,82 +1053,7 @@ This approach is clearly visible in the supporting structures and overall pedago
 - GDPs used in response  participant  requests for new features they wanted to add to their games resulting  as a menu of GDPs as documentation and code examples to facilitate creation of new code
 
 
-<!-- NOTE - DROP - MAKE MORE DIRECT
-While the scope of this study is not on the micro-level of tool use, it is useful to collate some broad observations from my journal notes and video data on how participants used the new tools introduced. This is done in relation dimensions of complexity exposed in research on educational coding tools. -->
-
-### Authenticity and Agency in tool used
-
-Aligned with the general principles of PBL [@hung_engaged_2006], this design has strived for authenticity in varied forms. Authenticity in terms of activity object here is multiple in dimension, e.g in audience, in tool use and in creative processes. While the impact of the authentic dimentions of the tools and process described in this chapter 7 in depth, this section outlines some of the rationale of design descriptions in relation to existing research.
-
-
-#### Increased scaffolding of tools can increase instrumental agency but at what cost?
-
-My design decision to build the toolset as structure on top of authentic tools and languages can be likened to creating a protective harbour to shield new users from the complexity of the underlying configuration of interrelated web-technologies and instead highlight design affordances that facilitate creative agency.
-
-Increased scaffolding of learner resources and tools can increase instrumental agency for novice coders but at the potential cost of reducing access to the tools and processes of authentic creative communities.
-
-Of particular relevant to the process of this design is the  constructionist design principles, choose black boxes carefully.  Resnick [@resnick_reflections_2005] explains the designing of black boxes as the process of as abstracting away areas potentially problematic areas of the production process. Black boxes allow the learning design to steer participants towards the exploration of certain concepts and away from those that have been hidden.
-
-The _black box_ design decisions of use of tools and documentation create a kind of border between the participants experience with the protective environment of the scaffolded learning experience and a more open ecology of learning from code in the wild; specifically via the use of authentic developer focused tools, processes and documentation. A significant drawback of using a bespoke tool for novices is that attempts to progress by stepping outside of that protective area risk culture shock and alienation from the newly unfamiliar environment.
-
-The adaptations of to these tools can be conceived of as increasing instrumental agency by removing the need to understand concepts or use tools which were beyond the skill level of the participants.
-
-Other tensions were resolved with more fundamental shifts to the overall structure of the activity which can be said to align more closely with the concept of transformative (authorial agency)  agency.
-
-IS THIS TRUE - WHAT ARE EXAMPLES?
-EXAMPLES ALIGN BETTER WITH EMERGENT USE OF GDP CODED IN NEXT CHAPTER - SO PERHAPS CONTRAST THIS AND USE AS THE TRANSITION.
-
-
-<!-- MOVE TO CH.7?
-Participants are able to leave the protective harbour by accessing more authentic documentation and moving beyond existing templates. The experience may be involve choppier waters but the tools and processes remain familiar. -->
-
-<!-- IT FEELS LIKE IT WOULD BE GOOD TO TRY TO SQUEEZE THIS BIT INTO CHAPTER 4 ?
-PERHAPS via some ADDITION TO A TABLE AT THE END OF CHATP#### Different black boxes for different goalsER 4 -->
-
-<!-- While these elements of ethos are aligned, the process of supporting novices to use an authentic, text-based language and authoring tools used by professional community required more specific adaptations (o) : creating simplified but extendable starting template; highlighting code variables as key design affordances; using a grid structure to visually facilitate level design; and simplifying the syntax and the structure of the game code. -->
-
-<!-- This is a long-running theme of constructionist research, with roots in Papert concept of Microworlds, typically embodied by the Mathland environment, where participants control a robotic turtle with lines of simplified LOGO code language.  Because the turtle speaks only LOGO, children are drawn to speak LOGO to progress. Thus, Scratch and Mircoworlds can be seen as digital playgrounds with affordances that encourage certain types of play. -->
-
-#### The potentially awesome impact of lifting the lid on authentic technologies   
-
-Lifting the lid on hidden technologies and concepts in hands-on, exploratory processes can be empowering for participants. Ratto explores this via critical making [@ratto_critical_2011], a process which playfully surfaces Latour's [@weibel_making_2005; @latour_cautious_2008] concepts of shifting matters of fact to matters of concern by exposing taken for granted artefacts as objects that have been designed (for better or worse). Conversations between participants showing an inspirational or engaging impact on previously unknown technology. For examples, exchanges among participants that communicated a sense of awe of how much effort and coding must be involved in a professional game based on the relative complexity of the code of their simple game.    
-
-    Pearl: It just shows you what goes into these games.
-    Student Helper 3: Think about how much effort goes into.
-    Pearl: You just take things for granted don’t you?
-
-
-#### Remixing, peer learning, and choice of starting template
-
-**Tension of a group remixing from one template rather than feeler community inspiration and interaction**
-
-To address issues of a practical nature to get starting coding, a restriction in game genre and was made in the form of a starting template, thus restricting personal choice, in a way which negatively impacted some families (see appendix 5.bee). In addition no online community was promoted to motivate inspiration from the work of others,  collaboration and peer review via comments [ @monroy-hernandez_cooperation_nodate; @cress_supporting_2016]. However some positive aspects inherent to this design choice.
-
-- In practical terms, it simplified the process of supporting code errors,
-
-- it spurred community inspiration and interaction, peer support, sharing and problem solving due to the use of similar code bases.
-
-
-<!-- Sharing of ideas and inspiration did happen both on the playtesting (explored later and more extensively Chapter 7) of each others games and via incidental exposure to the online graphical creations of others via a shared account to Piskel. -->
-
-
-
-### Expressing the key features of this design narrative using the argumentative grammar of 3GAT
-
-In returning to the role of 3GAT concepts in outlining the argumentative grammar of this design, the following observations are of value.
-
-<!-- NOTE - PENUEL and others exploration of argumentative grammar of interventions.  -->
-
-
-  - Affordances outlined in this learning design  double stimulation, give a quick summary, different types of agency  
-
-  - UMC literature, and half baked games, emerged, concepts which were not well known before the start of this research. These pedagogies can be seen pedagogy built around a sets of design affordances that fitting a DBR approach,
-
-
-
-**Emergence of GDPs as a germ cell of activity**
-
-For this learning design, the concept and pedagogy of working with game design patterns emerged not only as an object of activity on a more granular scope than typical, but also as guiding germ cell concept which helps participant and facilitators.
+EDIT THE FOLLOWING DOWN 
 
 For participants the help is conceptual and motivatinal.  
 
@@ -1063,30 +1066,10 @@ The data gathered showed that while many were at a level of making changes to pe
 OPEN THE DOOR HERE - AND POINT TO THE NEXT CHAPTER RATHER THAN TACKLING IT ALL.
 
 
-**The role of the design to move towards goal of computational fluency and agency (in relation to the research question)**
+<!-- NOTE - DROP - MAKE MORE DIRECT
+While the scope of this study is not on the micro-level of tool use, it is useful to collate some broad observations from my journal notes and video data on how participants used the new tools introduced. This is done in relation dimensions of complexity exposed in research on educational coding tools. -->
 
-RQ2 addresses the use of GDPs to develop computational fluency.
 
-At some point in this process I realised that I wanted to encourage the growth of computational fluency. That was not clear, the use of computational thinking also jumped out from a sense of wanting to fit into the common frameworks of this area. But this approach had always seemed too abstract as a form of repertoire to me. More hands on specific repertoires to do with the logistics of more concrete tasks suited the high impact from minimal input approach, made particularly relevant given the difficulty of using a code environment.
-
-I did so in part by exploring these dimensions of the learning design in line with wider conceptions of PBL and UDL.
-
-  - particpant voice and choice
-  - peer learning and ongoing sharing of process via product
-  - reduced class instructions
-  - avoiding stuckness
-  - linking to authentic practices and commuities
-
-While computational fluency is a valid of the objectives of the game making activity goal, this chapter has (re)surfaced the many barriers to achieving this via the text coding of a multi-media project.
-
-The next section provides a summary of those barriers via a rough analysis as part of the process of sufacing tensions and supported by the thematic analysis of video data.
-
-<!-- This approach was more prescriptive than I would have adopted, however it worked well.
-This hesitation overcome by intervention from others can be explored in terms of agency.
-
-The shift of perspective from others and the structure to try it out was very helpful in overcoming conflicts stemming from my pre-conceptions. -->
-
-<!-- The students focused on increasing a scaffolded task which increased the instrumental agency of the participants. -->
 
 
 
@@ -1094,6 +1077,10 @@ The shift of perspective from others and the structure to try it out was very he
 
 
 #### Returning to discussion the  emergent and mutual nature of the design and what it has to say about participant  agency
+
+
+<!-- LATER? My choices balanced the value of positive engagement of asset creating, development of digital literacy skills associated with web production, and a focus on promoting code modification.   -->
+
 
 My role to encourage a learning environment which met the following characteristics via changes in learning design has been explored in this chapter via a detailed exploration of tensions arising, changes and inherrent motivations.
 
